--- a/public/index.html
+++ b/public/index.html
@@ -418,7 +418,7 @@ function submitFacultyFeedback() {
     };
 
     // 🔹 Send to Formspree instead of Google Apps Script
-fetch("http://localhost:5000/feedback", {
+fetch("https://student-feedback-backend-n8cd.onrender.com", {
     method: "POST",
     headers: {
         "Content-Type": "application/json"
@@ -445,3 +445,4 @@ fetch("http://localhost:5000/feedback", {
     .catch(err => alert("Fetch Error: " + err.message));
 }
 </script>
+
