--- a/public/index.html
+++ b/public/index.html
@@ -318,20 +318,19 @@ function showFacultySelection(){
     showPage('page2');
     const grid = document.getElementById('facultyGrid');
     grid.innerHTML = '';
-    faculties.forEach((f, idx) => {
-        const card = document.createElement('div');
-        card.className = 'faculty-card p-4 border rounded-md text-center ' + 
-            (completedFaculties.includes(f) ? 'bg-green-200 cursor-not-allowed' : 'bg-gray-50 cursor-pointer');
-        card.innerHTML = `<h3 class="font-semibold">${f}</h3>`;
-        if(!completedFaculties.includes(f)){
-            card.onclick = () => {
-    if (!completedFaculties.includes(f)) { // only if not completed
-        selectedFacultyIndex = idx;       // set the current faculty index
-        startFeedback();                  // show feedback page
+faculties.forEach((f, idx) => {
+    const card = document.createElement('div');
+    card.className = 'faculty-card p-4 border rounded-md text-center ' +
+        (completedFaculties.includes(f) ? 'bg-green-200 cursor-not-allowed' : 'bg-gray-50 cursor-pointer');
+    card.innerHTML = `<h3 class="font-semibold">${f}</h3>`;
+    if (!completedFaculties.includes(f)) {
+        card.onclick = () => {
+            selectedFacultyIndex = idx;
+            startFeedback(); // make sure this resets fields
+        };
     }
-};
-        grid.appendChild(card);
-    });
+    grid.appendChild(card);
+});
 }
 
 // Start feedback
@@ -452,4 +451,5 @@ async function submitFacultyFeedback() {
         alert("❌ Fetch Error: " + err.message);
     }
 }
+
 
