--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,8 @@
 
     <!-- ✅ Next button at the bottom -->
     <button type="button" id="nextBtn" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
-        Next
-    </button>
+    Next →
+	</button>
 </div>
             <!-- Ratings 1-5 -->
             <div>
@@ -464,6 +464,7 @@ async function submitFacultyFeedback() {
         alert("❌ Fetch Error: " + err.message);
     }
 }
+
 
 
 
