--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,17 @@
                 <label class="block text-sm font-medium text-gray-700 mb-2">Email ID *</label>
                 <input type="email" id="email" class="w-full px-4 py-2 border border-gray-300 rounded-md" placeholder="Enter email address">
             </div>
-            <div>
-                <label class="block text-sm font-medium text-gray-700 mb-2">Mobile Number *</label>
-                <input type="tel" id="mobile" class="w-full px-4 py-2 border border-gray-300 rounded-md" placeholder="Enter mobile number">
-            </div>
-        </div>
+<div>
+    <label class="block text-sm font-medium text-gray-700 mb-2">Mobile Number *</label>
+    <input type="tel" id="mobile" class="w-full px-4 py-2 border border-gray-300 rounded-md" placeholder="Enter mobile number">
+</div>
+
+<div class="mt-4 text-right">
+    <button type="button" id="page1NextBtn" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
+        Next →
+    </button>
+</div>
+
         <div class="mt-8 flex justify-end">
             <button onclick="validatePage1()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Next → Select Faculty</button>
         </div>
@@ -464,7 +470,3 @@ async function submitFacultyFeedback() {
         alert("❌ Fetch Error: " + err.message);
     }
 }
-
-
-
-
