--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@ function submitFacultyFeedback() {
                 showFacultySelection();
             }
         } else {
-            alert("Formspree Error: Could not submit data.");
+            alert("Could not submit data.");
         }
     })
     .catch(err => alert("Fetch Error: " + err.message));
