--- a/public/index.html
+++ b/public/index.html
@@ -237,12 +237,18 @@
 </div>
 
 
-        </div>
-        <div class="mt-8 flex justify-between">
-            <button onclick="showFacultySelection()" class="bg-gray-500 text-white px-6 py-2 rounded-md hover:bg-gray-600">← Back</button>
-            <button onclick="submitFacultyFeedback()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Next →</button>
-        </div>
-    </div>
+</div>
+<div class="mt-8 flex justify-between">
+    <button onclick="showFacultySelection()" 
+            class="bg-gray-500 text-white px-6 py-2 rounded-md hover:bg-gray-600">
+        ← Back
+    </button>
+    <button id="submitFeedbackBtn" 
+            class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">
+        Next →
+    </button>
+</div>
+</div>
 
     <!-- Page 4: Completion -->
     <div id="page4" class="form-page bg-white rounded-lg shadow-md p-6 text-center">
