--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="mt-8 flex justify-end">
-            <button onclick="validatePage1()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Next → Select Faculty</button>
+            <button id="btn" onclick="validatePage1()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Next → Select Faculty</button>
         </div>
     </div>
 
